demos/04-loadbalancer-l2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-showcase
  namespace: test-mesh
  labels:
    app: web-showcase
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-showcase
  template:
    metadata:
      labels:
        app: web-showcase
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - "echo '<html><body><h1>Pod: '$HOSTNAME'</h1></body></html>' > /usr/share/nginx/html/index.html"

---
apiVersion: v1
kind: Service
metadata:
  name: web-showcase-lb
  namespace: test-mesh
  annotations:
spec:
  type: LoadBalancer
  selector:
    app: web-showcase
  ports:
    - port: 80
      targetPort: 80
