demos/03-fqdn-policies.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-client
  namespace: test-mesh
  labels:
    app: external-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-client
  template:
    metadata:
      labels:
        app: external-client
    spec:
      containers:
        - name: curl
          image: ubuntu:latest
          command: ["sleep", "3600"]

---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fqdn-egress-allowlist
  namespace: test-mesh
spec:
  endpointSelector:
    matchLabels:
      app: external-client
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
          rules:
            dns:
              - matchName: "api.github.com"
              - matchName: "kubernetes.io"
              - matchName: "raw.githubusercontent.com"

    - toFQDNs:
        - matchName: "api.github.com"
        - matchName: "kubernetes.io"
        - matchName: "raw.githubusercontent.com"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
